--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Walsh
 logo:  # you can add own logo.
 description: Research Assistant at The Alan Turing Institute
-baseurl: "/home" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 
