--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
 
 
 # Google Analytics
-google-analytics: UA-158621574-1 # add your identifier. For example UA-99631805-1.
+google-analytics: UA-158621574-1
 
 
 # Build settings
