--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ contact:
     link: https://scholar.google.com/citations?view_op=list_works&hl=en&user=gyScxvoAAAAJ
   - name: LinkedIn
     link: https://uk.linkedin.com/in/jejwalsh
-  # - name: Instagram
-  #   link: https://instagram.com/
+  - name: GitHub
+    link: https://github.com/dead-water
 
 
 # Comment Section (Disqus)
